<resources>
    <string name="app_name">Tsk1</string>

    <string name="home_page">Ana səhifə</string>
    <string name="welcome">Xoş gəlmisən!</string>
    <string name="payments">Ödənişlər</string>
    <string name="other">Digər</string>

    <string name="home">Əsas</string>
    <string name="payment">Ödəmələr</string>
    <string name="services">Xidmətlər</string>
    <string name="statistics">Göstəricilər</string>
    <string name="others">Daha çox</string>



    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ortalama_enerji_stehlak">Ortalama enerji İstehlakı</string>
    <string name="add_auto_top_up">Add auto Top-Up</string>
    <string name="enerjiy_q_na_t_m_sl_h_tl_ri">Enerjiyə qənaət məsləhətləri</string>
    <string name="sizin_serfiyyat">Sizin serfiyyat</string>
    <string name="_296196298162986">№ 296196298162986</string>
    <string name="_25_98">25.98 ₼</string>
    <string name="_344_5_kw_s">344.5 KW/s</string>
    <string name="limiti_kecmisiniz">limiti keçmisiniz</string>
    <string name="balansi_artirmaq">Balansi artirmaq</string>
    <string name="odenislere_kecid">Odenislere kecid</string>
    <string name="x_b_rl_r">Xəbərlər</string>
    <string name="prezident_lham_liyev">Prezident İlham Əliyev Mingəçevir şəhərinin elektrik paylayıcı şəbəkəsinin Avtomatik İdarəetmə…</string>
    <string name="a_cab_dinin">Ağcabədinin Pərioğullar və Hacıbədəlli kəndlərinin elektrik şəbəkəsi yenidən qurulur.</string>
    <string name="hali_abonentinin">Əhali abonentinin enerji təchizatı şəbəkəsinə qoşulması</string>
    <string name="kalkulyatorlar">Kalkulyatorlar</string>
    <string name="qo_ulma">Qoşulma Haqqının Onlayn Ödəlməsi</string>
    <string name="borcun_ara">Borcun araşdırılması və borcun olmaması (və ya olması) barədə sənədin verilməsi</string>
    <string name="abonentin">Abonentin geniş tarixçəsinin verilməsi</string>

</resources>