<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@id/homeFragment"
    android:id="@+id/bottom_nav_graph">
    <fragment
        android:id="@+id/homeFragment"
        android:name="com.example.tsk1.view.home.HomeFragment"
        android:label="@string/home_page"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/paymentFragment"
        android:name="com.example.tsk1.view.payment.PaymentFragment"
        android:label="@string/payments"
        tools:layout="@layout/fragment_payment" />
    <fragment
        android:id="@+id/servicesFragment"
        android:name="com.example.tsk1.view.services.ServicesFragment"
        android:label="@string/services"
        tools:layout="@layout/fragment_services" />
    <fragment
        android:id="@+id/statisticsFragment"
        android:name="com.example.tsk1.view.statistics.StatisticsFragment"
        android:label="@string/statistics"
        tools:layout="@layout/fragment_statistics" />
    <fragment
        android:id="@+id/othersFragment"
        android:name="com.example.tsk1.view.others.OthersFragment"
        android:label="@string/other"
        tools:layout="@layout/fragment_others" />
</navigation>